[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coloredlogs>=15.0.1",
    "dvc[all]>=3.61.0",
    "dvclive>=3.48.3",
    "imbalanced-learn",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pyaml>=25.7.0",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]

[tool.uv.sources]
imbalanced-learn = { git = "https://github.com/scikit-learn-contrib/imbalanced-learn" }
